# tracing-perfetto

./: .gitignore  Cargo.toml  README.md
doc/: notes.md
examples/: fibonacci.rs
src/: annotations.rs  buffer.rs  emit.rs  intern.rs  layer.rs  lib.rs  main.rs  message.rs  packet.rs  thread_local.rs  writer.rs
